mobile view fix 0.2

--- a/css/index.css
+++ b/css/index.css
@@ -459,6 +459,11 @@ header {
     --score-y: 6;
     --wireframe-x: var(--mobile-width);
   }
+
+  .root {
+    height: 110vh;
+  }
+
   .game {
     display: grid;
     grid-template-columns: repeat(var(--mobile-width), var(--unit));
